--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,3 +36,47 @@ code {
   display: flex;
 
 }
+.divGrafica{
+  width: 90%;
+  height: 30%;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
+  border: solid 1px #e6e6e7;
+  background-color: #ffffff;
+}
+.paddding{
+margin-left: 80vw;
+}
+.margen{
+  margin-top: '25%';
+   margin-left:'1em';
+}
+.registro-de {
+  width: 110px;
+  height: 27px;
+  font-family: Lato;
+  font-size: 22px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 0.73;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000000;
+}
+.botonRojo {
+  width: 107px;
+  height: 51px;
+  border-radius: 4px;
+  background-color: #b82324;
+  color: #b82324;
+  outline: none;
+}
+.botonVerde {
+  width: 107px;
+  height: 51px;
+  border-radius: 4px;
+  background-color:#17a54d;
+  color: #17a54d;
+  outline: none;
+}
