--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -80,3 +80,16 @@ margin-left: 80vw;
   color: #17a54d;
   outline: none;
 }
+.divBalance {
+  width: 155px;
+  height: 79px;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.19;
+  letter-spacing: normal;
+  text-align: right;
+  color: #000000;
+}
