--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,3 +93,14 @@ margin-left: 80vw;
   text-align: right;
   color: #000000;
 }
+.footer {
+  width: 100%;
+  height: 100%;
+  padding-top:20px;
+  padding-bottom:10px;
+  margin-top: 5vh;
+  border-top-left-radius: 50px 100px;
+  border-bottom-right-radius: 50px 100px;
+  background-color: #17a54d;
+  color: white;
+}
